# raytracer

./: CMakeLists.txt  README.md  main.cpp  main.h
src/: render.cpp  render.h
src/scene/: sceneManager.cpp  sceneManager.h
src/tracer/: tracer.h
src/tracer/fileIO/: writeToBMP.cpp  writeToBMP.h
src/tracer/structs/: color.cpp  color.h  ray.cpp  ray.h  screen.cpp  screen.h  shapes.cpp  shapes.h  vectors.cpp  vectors.h
src/tracer/structs/utils/: rng.cpp
tracer/: tracer.h
tracer/structs/: color.h  ray.cpp  ray.h  screen.cpp  screen.h  shapes.h  vectors.cpp  vectors.h
tracer/structs/utils/: rng.h
